@@ -63,9 +63,9 @@ describe Puppet::Util::PTomulik::Package::Ports::Options do
       ["OPTIONS_FILE_SET+=FOO\n", {:FOO=>true}],
       ["OPTIONS_FILE_UNSET+=BAR\n", {:BAR=>false}],
       ["WITH_FOO=true\n", {:FOO=>true}],
-      ["WITH_FOO=false\n", {:FOO=>false}],
+      ["WITHOUT_FOO=true\n", {:FOO=>false}],
       ["WITH_BAR=true\n", {:BAR=>true}],
-      ["WITH_BAR=false\n", {:BAR=>false}],
+      ["WITHOUT_BAR=blea\n", {:BAR=>false}],
     ].each do |str,hash|
       context "#parse(#{str.inspect})" do
         let(:str)  { str }
@@ -183,14 +183,15 @@ describe Puppet::Util::PTomulik::Package::Ports::Options do
       ],
       # 3.
       [
-        described_class[ {:FOO => true, :BAR =>false} ],
-        {:pkgname => 'foobar-1.2.3', :syntax => :with},
+        described_class[ {:FOO => true, :BAR => false, :GEEZ => false} ],
+        {:pkgname => 'foobar-1.2.3', :syntax => :with_without},
         [
           "# This file is auto-generated by puppet\n",
           "# Options for foobar-1.2.3\n",
           "_OPTIONS_READ=foobar-1.2.3\n",
-          "WITH_BAR=false\n",
+          "WITHOUT_BAR=true\n",
           "WITH_FOO=true\n",
+          "WITHOUT_GEEZ=true\n",
         ].join("")
       ]
     ].each do |obj,params, result|
