@@ -1,6 +1,8 @@
-2016-09-16 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+2016-09-17 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * fix parsing/generating file options in WITH/WITHOUT syntax
   * release 0.1.0
   * add support for ancient FreeBSDs (>=9.0)
+2016-09-16 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.0.11
   * fixed incompatibility with puppet 2.7 (execpipe)
 2016-09-15 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
